[package]
name = "reactive-pg"
description = "Reactive Postgres layer for rust"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Champii/reactive-postgres-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres_query = { git = "https://github.com/nolanderc/rust-postgres-query", version = "0.3.3" }
tokio-postgres = { version = "0.7.0", features = ["with-serde_json-1"] }
anyhow = "1.0.40"
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["full"] }
derive-new = "0.5.8"
futures = { version = "0.3"}
serde_json = "1.0.60"
serde = { version = "1.0.117", features = ["derive"] }
sqlparser = "0.26.0"
async-trait = "0.1.58"
